--- a/src/views/realTimeProducts.handlebars
+++ b/src/views/realTimeProducts.handlebars
@@ -10,7 +10,7 @@
 
 
 <p id="products"></p>
-
+<p id="message"></p>
 
 <script src="/socket.io/socket.io.js"></script>
 <script src="js/index.js"></script>
